# energy-jax

./: CHANGELOG.md  README.md  pyproject.toml
energy-jax/: __init__.py  losses.py  optimizers.py  utils.py
energy-jax/ebms/: __init__.py  ebm.py  nn_ebms.py  rbms.py  simple_ebms.py
energy-jax/nns/: __init__.py  cnn.py  gnn.py  mlp.py  transformer.py
energy-jax/sampling/: __init__.py  adaptation.py  buffers.py  continuous.py  discrete.py  sampler.py
examples/: 00_EBM_Intro.ipynb  01_sampling.ipynb  02_MLP_EBMs.ipynb  03_transformer_intro.ipynb  04_resnet_classification.ipynb  05_gnn_classification.ipynb  06_NGD_with_MVP.ipynb  07_MNIST_EBM.ipynb  08_GWG.ipynb  09_class_conditional_MNIST.ipynb  10_score_matching.ipynb  mnist_conditional_ebm.eqx  mnist_ebm.eqx  nebula_plots.py
examples/cora/: README
tests/: ebm_test.py  losses_test.py  nns_test.py  optimizer_test.py  parallel_samplers_test.py  rbms_test.py  samplers_test.py  simple_ebms_test.py  utils_test.py
